--- a/app/src/main/res/layout/activity_main_motion_scene_end.xml
+++ b/app/src/main/res/layout/activity_main_motion_scene_end.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
 
     <LinearLayout
         android:id="@+id/topLayout"
@@ -26,22 +25,14 @@
         android:layout_width="411dp"
         android:layout_height="wrap_content"
         android:background="#FFF"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="@+id/topLayout"
         app:layout_constraintEnd_toEndOf="parent">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"
-            android:id="@+id/imageview"
-            />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/name_of_song"
-            android:id="@+id/nameSong"
-            />
-
+            android:text="@string/middle_text" />
     </LinearLayout>
 
     <LinearLayout
@@ -62,5 +53,4 @@
 
     </LinearLayout>
 
-
-</androidx.constraintlayout.motion.widget.MotionLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
