--- a/app/src/main/res/layout/activity_main_motion_scene_end.xml
+++ b/app/src/main/res/layout/activity_main_motion_scene_end.xml
@@ -7,11 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <LinearLayout
         android:id="@+id/topLayout"
         android:layout_width="411dp"
         android:layout_height="0dp"
-        android:background="#702121"
+        android:background="#443939"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,20 +21,73 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/middleLayout"
-        android:layout_width="411dp"
-        android:layout_height="wrap_content"
-        android:background="#FFF"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="@+id/topLayout"
-        app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/middle_text" />
-    </LinearLayout>
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
+        android:layout_marginEnd="56dp"
+        app:layout_constraintBottom_toTopOf="@+id/pauseButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/songName" />
+
+    <ImageButton
+        android:id="@+id/pauseButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@null"
+        app:layout_constraintBottom_toBottomOf="@+id/topLayout"
+        app:layout_constraintEnd_toStartOf="@+id/nextButton"
+        app:srcCompat="@drawable/ic_pause_black_24dp" />
+
+    <ImageButton
+        android:id="@+id/nextButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@null"
+        app:layout_constraintBottom_toBottomOf="@+id/topLayout"
+        app:layout_constraintEnd_toEndOf="@+id/imageview"
+        app:srcCompat="@drawable/ic_skip_next_black_24dp" />
+
+
+    <ImageButton
+        android:id="@+id/previousButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+
+        android:src="@drawable/ic_skip_previous_black_24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/topLayout"
+        app:layout_constraintEnd_toStartOf="@+id/pauseButton"
+        android:background="@null"
+        app:layout_constraintStart_toStartOf="@+id/imageview" />
+
+    <ImageView
+        android:id="@+id/imageview"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="32dp"
+        android:src="@mipmap/ic_launcher"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/songName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/name_of_song"
+        android:textColor="#fff"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageview" />
+
+
+
 
     <LinearLayout
         android:id="@+id/bottomLayout"
@@ -47,9 +101,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/end_text"
             android:layout_marginTop="8dp"
-            android:textSize="24sp"/>
+            android:text="@string/end_text"
+            android:textSize="24sp" />
 
     </LinearLayout>
 
