--- a/app/src/main/res/layout/activity_main_motion_scene_start.xml
+++ b/app/src/main/res/layout/activity_main_motion_scene_start.xml
@@ -5,13 +5,14 @@
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#3F51B5"
+
     tools:context=".ui.main.MainActivity">
 
     <LinearLayout
         android:id="@+id/topLayout"
         android:layout_width="411dp"
         android:layout_height="0dp"
-        android:background="#443939"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -92,18 +93,12 @@
     <LinearLayout
         android:id="@+id/bottomLayout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/end_text"
-            android:layout_marginTop="8dp"
-            android:textSize="24sp"/>
 
     </LinearLayout>
 
