--- a/app/src/main/res/xml/activity_main_scene.xml
+++ b/app/src/main/res/xml/activity_main_scene.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<MotionScene
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<MotionScene xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <Transition
         app:constraintSetEnd="@layout/activity_main_motion_scene_end"
@@ -8,6 +7,39 @@
 
         <OnSwipe app:touchAnchorSide="top"
             app:dragDirection="dragUp" />
+    </Transition>
+
+    <Transition
+        app:constraintSetEnd="@layout/activity_main_motion_scene_end"
+        app:constraintSetStart="@layout/activity_main_motion_scene_start">
+        <OnClick
+            app:targetId="@+id/first"
+            app:clickAction="transitionToEnd"
+            />
+    </Transition>
+    <Transition
+        app:constraintSetEnd="@layout/activity_main_motion_scene_end"
+        app:constraintSetStart="@layout/activity_main_motion_scene_start">
+        <OnClick
+            app:targetId="@+id/second"
+            app:clickAction="transitionToEnd"
+            />
+    </Transition>
+    <Transition
+        app:constraintSetEnd="@layout/activity_main_motion_scene_end"
+        app:constraintSetStart="@layout/activity_main_motion_scene_start">
+        <OnClick
+            app:targetId="@+id/third"
+            app:clickAction="transitionToEnd"
+            />
+    </Transition>
+    <Transition
+        app:constraintSetEnd="@layout/activity_main_motion_scene_end"
+        app:constraintSetStart="@layout/activity_main_motion_scene_start">
+        <OnClick
+            app:targetId="@+id/songName"
+            app:clickAction="transitionToEnd"
+            />
     </Transition>
 
 </MotionScene>
