--- a/app/src/main/res/xml/activity_main_scene.xml
+++ b/app/src/main/res/xml/activity_main_scene.xml
@@ -3,43 +3,40 @@
 
     <Transition
         app:constraintSetEnd="@layout/activity_main_motion_scene_end"
-        app:constraintSetStart="@layout/activity_main_motion_scene_start">
+        app:constraintSetStart="@layout/activity_main_motion_scene_start"
+        app:duration="500">
 
-        <OnSwipe app:touchAnchorSide="top"
-            app:dragDirection="dragUp" />
+        <OnSwipe
+            app:dragDirection="dragUp"
+            app:touchAnchorSide="top" />
+        <OnClick
+            app:clickAction="transitionToEnd"
+            app:targetId="@+id/songName" />
     </Transition>
 
     <Transition
         app:constraintSetEnd="@layout/activity_main_motion_scene_end"
-        app:constraintSetStart="@layout/activity_main_motion_scene_start">
+        app:constraintSetStart="@layout/activity_main_motion_scene_start"
+        app:duration="500">
         <OnClick
-            app:targetId="@+id/first"
             app:clickAction="transitionToEnd"
-            />
+            app:targetId="@+id/first" />
     </Transition>
     <Transition
         app:constraintSetEnd="@layout/activity_main_motion_scene_end"
-        app:constraintSetStart="@layout/activity_main_motion_scene_start">
+        app:constraintSetStart="@layout/activity_main_motion_scene_start"
+        app:duration="500">
         <OnClick
-            app:targetId="@+id/second"
             app:clickAction="transitionToEnd"
-            />
+            app:targetId="@+id/second" />
     </Transition>
     <Transition
         app:constraintSetEnd="@layout/activity_main_motion_scene_end"
-        app:constraintSetStart="@layout/activity_main_motion_scene_start">
+        app:constraintSetStart="@layout/activity_main_motion_scene_start"
+        app:duration="500">
         <OnClick
-            app:targetId="@+id/third"
             app:clickAction="transitionToEnd"
-            />
-    </Transition>
-    <Transition
-        app:constraintSetEnd="@layout/activity_main_motion_scene_end"
-        app:constraintSetStart="@layout/activity_main_motion_scene_start">
-        <OnClick
-            app:targetId="@+id/songName"
-            app:clickAction="transitionToEnd"
-            />
+            app:targetId="@+id/third" />
     </Transition>
 
 </MotionScene>
