--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -120,6 +120,18 @@
                 />
         </LinearLayout>
 
+        <ImageButton
+            android:id="@+id/sleepButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="50dp"
+            android:background="@null"
+            android:visibility="gone"
+            android:src="@drawable/ic_timer_black_24dp"
+            app:layout_constraintBottom_toBottomOf="@+id/topLayout"
+            app:layout_constraintStart_toStartOf="@+id/seekBar"
+            app:layout_constraintTop_toBottomOf="@+id/topLayout" />
+
 
         <ImageButton
             android:id="@+id/pauseButton"
