--- a/app/src/main/res/layout/activity_main_motion_scene_end.xml
+++ b/app/src/main/res/layout/activity_main_motion_scene_end.xml
@@ -93,6 +93,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageview" />
 
+    <ImageButton
+        android:id="@+id/sleepButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@null"
+        android:src="@drawable/ic_timer_black_24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/nextButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/nextButton"
+        app:layout_constraintTop_toTopOf="@+id/nextButton" />
+
     <LinearLayout
         android:id="@+id/bottomLayout"
         android:layout_width="0dp"
@@ -102,6 +113,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topLayout">
+
+
 
 
     </LinearLayout>
