--- a/app/src/main/res/layout/activity_main_motion_scene_end.xml
+++ b/app/src/main/res/layout/activity_main_motion_scene_end.xml
@@ -35,7 +35,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/songName" />
 
-    <ImageButton
+    <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/pauseButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -46,7 +46,7 @@
         app:layout_constraintTop_toBottomOf="@+id/topLayout"
         app:srcCompat="@drawable/ic_pause_black_24dp" />
 
-    <ImageButton
+    <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/nextButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -58,7 +58,7 @@
         app:srcCompat="@drawable/ic_skip_next_black_24dp" />
 
 
-    <ImageButton
+    <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/previousButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -69,7 +69,7 @@
         app:layout_constraintStart_toStartOf="@+id/seekBar"
         app:layout_constraintTop_toBottomOf="@+id/topLayout" />
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageview"
         android:layout_width="150dp"
         android:layout_height="150dp"
@@ -92,7 +92,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageview" />
 
-    <ImageButton
+    <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/sleepButton"
         android:layout_width="32dp"
         android:layout_height="32dp"
